src/sass/_instance_detail_snapshots.scss
.snapshot-list {
  .upper-controls-bar {
    display: flex;
    gap: $sph--large;

    .search-box-wrapper {
      display: flex;
      flex-grow: 1;

      .search-box {
        max-width: 25rem;
        width: 100%;
        @media screen and (max-width: 1070px) {
          display: flex;
        }
      }
    }
  }

  .snapshot-creation-modal {
    .p-modal__dialog {
      min-width: 30rem;
      padding-bottom: 0;
      padding-left: $sph--x-large;
      padding-right: $sph--x-large;
    }

    .p-form__label {
      margin-bottom: 0;
    }

    .p-inline-list {
      margin-bottom: $spv--small;
    }

    .p-inline-list__item {
      margin-right: $sph--small;
    }

    .expiration-wrapper {
      grid-gap: $sph--large;
    }
  }

  .snapshots-table {
    margin-bottom: 0;

    th,
    td {
      display: table-cell;
      vertical-align: middle;
    }

    th:last-child {
      display: none;
    }

    td:last-child {
      padding-right: $sph--large;
    }

    thead,
    tbody {
      display: block;
      overflow-y: auto;
      scrollbar-gutter: stable;
    }

    tbody {
      height: calc(100vh - 323px);
    }

    thead tr,
    tbody tr {
      display: table;
      table-layout: fixed;
      width: 100%;
    }

    .select {
      padding-right: 0;
      width: 70px;

      button {
        margin-left: -15px;
      }
    }

    .name {
      min-width: 170px;
    }

    .created {
      min-width: 200px;
    }

    .expiration {
      min-width: 200px;
    }

    .stateful {
      width: 105px;
    }

    .actions {
      width: 240px;

      .p-inline-list__item:not(:last-of-type) {
        margin-right: $sph--small;
      }
    }

    .u-row:hover {
      background-color: $colors--light-theme--background-hover;
    }

    // show actions only on hover if a pointing device is used
    @media screen and (pointer: fine) {
      .u-snapshot-actions {
        visibility: hidden;
      }

      .u-row:hover {
        .u-snapshot-actions {
          visibility: visible;
        }
      }
    }
  }

  .p-pagination__items {
    justify-content: flex-end;
  }

  .edit-snapshot-config {
    tbody {
      height: inherit !important;
      min-height: inherit !important;
    }
  }
}

